test(deep-understanding-of-jvm): chapter 3.2, new test cases for PhantomReference